<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.baianat.app.estshara.doctor.ui.viewmodels.SharedRegisterViewModel"/>
        <variable
            name="viewmodel"
            type="SharedRegisterViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        tools:context=".ui.fragments.register.fragments.finish.FinishFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart_sketch"
            android:layout_above="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_48sdp"
            android:contentDescription="@string/content_description_string" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:letterSpacing=".05"
            app:fontFamily="@font/weight_700"
            android:text="@string/title_finish_string" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helper_text_finish"
            android:layout_below="@+id/title"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_centerHorizontal="true"
            app:fontFamily="@font/weight_400" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:backgroundTint="@null"
            android:background="@drawable/shape_login_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/_48sdp"
            android:text="@string/end_string"
            android:elevation="4dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            android:shadowColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="@font/weight_700" />
    </RelativeLayout>
</layout>