<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.baianat.app.estshara.doctor.ui.fragments.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background"
        tools:context=".ui.fragments.login.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userNameTV"
            android:layout_marginTop="@dimen/_32sdp"
            android:textColor="@color/loginTextFieldColor"
            android:text="@string/user_name_string"
            android:textSize="17sp"
            android:fontFamily="@font/weight_400"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/userNameView"
            android:maxHeight="@dimen/_40sdp"
            android:orientation="horizontal"
            android:background="@drawable/shape_rec_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTV"
            android:layout_marginTop="@dimen/_8sdp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:maxHeight="@dimen/_40sdp"
                android:inputType="textAutoCorrect|textEmailAddress"
                android:id="@+id/userNameET"
                android:text="@{viewmodel.email}"
                android:imeOptions="actionNext"
                android:textColor="@color/loginTextFieldColor"
                android:background="@android:color/transparent"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTV"
            android:layout_marginTop="@dimen/_32sdp"
            android:textColor="@color/loginTextFieldColor"
            android:text="@string/password_string"
            android:textSize="17sp"
            android:fontFamily="@font/weight_400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameView"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordView"
            android:maxHeight="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/shape_rec_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTV">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:maxHeight="@dimen/_30sdp"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:text="@{viewmodel.password}"
               android:layout_weight="0.5"
                android:id="@+id/passwordET"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />


        </LinearLayout>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:onClick="@{viewmodel::onLoginButtonClick}"
            app:backgroundTint="@null"
            android:background="@drawable/shape_login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordView"
            android:layout_marginTop="@dimen/_48sdp"
            android:text="@string/login_string"
            android:elevation="4dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            android:shadowColor="@color/black"
            android:textSize="20sp"
            app:fontFamily="@font/weight_700"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problem_signing_in"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/black"
            app:fontFamily="@font/weight_400"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            app:backgroundTint="@null"
            android:onClick="@{viewmodel::onRegisterButtonClick}"
            android:background="@drawable/shape_register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_48sdp"
            android:text="@string/new_doctor_string"
            android:elevation="4dp"
            android:translationZ="4dp"
            android:stateListAnimator="@null"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="@dimen/_24sdp"
            app:fontFamily="@font/weight_700"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
